# Hanoi

./: .gitignore  LICENSE  README.md  game.py  hanoi.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
hanoi-outputs/: 1-discs.txt  10-discs.txt  11-discs.txt  12-discs.txt  13-discs.txt  14-discs.txt  15-discs.txt  2-discs.txt  3-discs.txt  4-discs.txt  5-discs.txt  6-discs.txt  7-discs.txt  8-discs.txt  9-discs.txt
src/hanoi/: __init__.py  cli.py  game.py  solver.py
src/hanoi/game/: __init__.py  colors.py  game.py  start_screen.py
tests/: test_headless.py  test_solver.py
