[project]
name = "hanoi"
version = "0.2.1"
description = "Visualize solving the tower of Hanoi problem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.6.1",
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"


[project.scripts]
hanoi = "hanoi.game:main"

# ---- Ruff configuration ----
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear: likely bugs / bad patterns
    "I",   # isort: import sorting
    "UP",  # pyupgrade: modernize syntax
    "SIM", # flake8-simplify
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
